# api/api/swagger/swagger.yaml
@@ -2,7 +2,7 @@ swagger: "2.0"
 info:
   version: "0.0.1"
   title: kakao job
-host: localhost:3000
+host: api.chicken-group.co.kr
 basePath: /
 schemes:
   - http
@@ -15,23 +15,28 @@ securityDefinitions:
     description: |
      For accessing the API a valid JWT token must be passed in all the queries in
      the 'Authorization' header.
-  
-  
      A valid JWT token is generated by the API and retourned as answer of a call
      to the route /login giving a valid user & password.
   
-  
-     The following syntax must be used in the 'Authorization' header :
-  
-         Bearer xxxxxx.yyyyyyy.zzzzzz
+# The following syntax must be used in the 'Authorization' header :
+#   Bearer xxxxxx.yyyyyyy.zzzzzz
+
 
 consumes:
   - application/json
 produces:
   - application/json
+  
 paths:
-
   /insertRecruiting:
+    # options:
+    # responses:
+    #   default:
+    #     description: CORS headers for all operations
+    #     headers:
+    #       Access-Control-Allow-Origin:
+    #         type: string
+    #         default: *
     x-swagger-router-controller: main-controller
     post:
       operationId: insertRecruiting
@@ -58,6 +63,12 @@ paths:
     get:
       operationId: getRecruitDetail
       description: "Recruit Detail"
+      # parameters:
+      #   - name: id
+      #     in: query
+      #     required: true
+      #     schema:
+      #       type: string
       responses:
         "200":
           description: "Success"
@@ -74,6 +85,13 @@ paths:
           description: "Success"
           schema:
             $ref: "#/definitions/Resource"
+        default:
+          description: CORS headers for all operations
+          headers:
+            Access-Control-Allow-Origin:
+              type: string
+              default: "*"
+
             
 definitions:
   Authentication:
